<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>SemaphoreAPIExecutor</groupId>
  <artifactId>SemaphoreAPIExecutor</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>A Camel Route</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <my.mainClass>SemaphoreAPIExecutor.HttpsClient</my.mainClass>
    <my.version>0.1.0.0</my.version>
    <my.productname>Semaphorexec</my.productname>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Camel BOM -->
      <dependency>
        <groupId>org.apache.cam2el</groupId>
        <artifactId>camel-parent</artifactId>
        <version>2.20.1</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-core</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.2</version>
    </dependency>

    <!-- testing -->
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <!-- Allows the example to be run via 'mvn compile exec:java' -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <archive>
            <manifestFile>target/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>package</phase>
            <goals><goal>launch4j</goal></goals>
            <configuration>
              <headerType>console</headerType>
              <outfile>target/${my.productname}.exe</outfile>
              <jar>target/${my.productname}.jar</jar>
              <errTitle>encc</errTitle>
              <classPath>
                <mainClass>${my.mainClass}</mainClass>
                <addDependencies>false</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <jre>
                <minVersion>1.5.0</minVersion>
                <opts>
                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
                </opts>
              </jre>
              <versionInfo>
                <fileVersion>${my.version}</fileVersion>
                <txtFileVersion>txt file version?</txtFileVersion>
                <fileDescription>Simple Semaphore API tasks executor</fileDescription>
                <copyright>my copyright</copyright>
                <productVersion>${my.version}</productVersion>
                <txtProductVersion>txt product version</txtProductVersion>
                <productName>${my.productname}</productName>
                <internalName>${my.productname}</internalName>
                <originalFilename>original.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <finalName>${my.productname}</finalName>
          <appendAssemblyId>false</appendAssemblyId>
          <archive>
            <manifest>
              <mainClass>${my.mainClass}</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
      <!--<plugin>-->
        <!--<groupId>org.apache.maven.plugins</groupId>-->
        <!--<artifactId>maven-jar-plugin</artifactId>-->
        <!--<version>2.4</version>-->
        <!--<configuration>-->
          <!--<archive>-->
            <!--<index>true</index>-->
            <!--<manifest>-->
              <!--<mainClass>SemaphoreAPIExecutor.HttpsClient</mainClass>-->
            <!--</manifest>-->
          <!--</archive>-->
        <!--</configuration>-->
      <!--</plugin>-->
      <!--<plugin>-->
        <!--<groupId>org.apache.maven.plugins</groupId>-->
        <!--<artifactId>maven-compiler-plugin</artifactId>-->
        <!--<configuration>-->
          <!--<source>1.8</source>-->
          <!--<target>1.8</target>-->
        <!--</configuration>-->
      <!--</plugin>-->

    </plugins>

  </build>

</project>
